# AI-Learning-Review-and-Documentation-System

./: .gitignore  ASSIGNMENT_TOPICS.md  GRADING_STANDARD.md  PYTHON_PROJECT_STRUCTURE.md  README.md  app.py  pyproject.toml  requirements.txt
data/: sample_data.json
docs/: AI_REFLECTION.md  DESIGN.md  SCREENSHOTS.md  STUDENT_INFO.yml  USAGE_EXAMPLES.md
report/: generate_report.py
src/final_project/: __init__.py  analysis.py  cli.py  models.py  services.py  storage.py  validators.py
tests/: test_cli.py  test_models.py  test_services.py  test_storage.py
